# IntelliHack-2025-Final-Round-Challenge

./: .deepsource.toml  .gitignore  404.html  Makefile  Makefile.new  README.md  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml
ai-microservice/: main.py  pyproject.toml  ruff.toml
ai_services/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  ruff.toml  run_mcp_server.py
ai_services/agno_agents/: assignment_agent.py  communication_agent.py  coordinator.py  intake_agent.py  prioritization_agent.py  triage_agent.py
ai_services/api/endpoints/: agents.py  incidents.py  requests.py  resources.py  tasks.py  users.py  users_new.py  websocket.py
ai_services/core/: auth.py  auth_backup.py  auth_new.py  config.py  database.py  redis_client.py
ai_services/database/migrations/: 001_initial_schema.sql  002_sample_data.sql
ai_services/mcp_integration/: __init__.py  server.py
ai_services/models/: incident.py  request.py  resource.py  task.py  user.py  user_backup.py  user_new.py
ai_services/services/: auth_service.py  incident_service.py  notification_service.py  request_service.py  resource_service.py  task_service.py
ai_services/tests/: conftest.py
ai_services/tests/test_agents/: test_agno_agents.py
ai_services/tests/test_api/: test_endpoints.py
ai_services/tests/test_services/: test_services.py
app-service/: package-lock.json
docs/: index.md  troubleshooting.md
frontend/: Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
search/: search_index.json
(+111 files in other folders)
