[project]
name = "ai-microservice"
version = "0.1.0"
description = "A microservice for AI-driven data processing and analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=1.5.4",
    "fastapi[standard]>=0.115.12",
    "langsmith>=0.3.42",
    "loguru>=0.7.3",
    "pydantic>=2.11.5",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
